fix overflow in x

--- a/src/index.css
+++ b/src/index.css
@@ -84,6 +84,6 @@ body {
 
 #wonder--app {
   min-width: 320px;
-  max-width: 420px;
+  max-width: 100vw;
   min-height: 100%;
 }
